--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
     "@storybook/addons": "^4.1.6",
     "@storybook/react": "^4.1.6",
     "babel-loader": "^8.0.5",
-    "storybook-chromatic": "^1.2.3"
+    "storybook-chromatic": "chromaui/storybook-chromatic#staging"
   }
 }
